--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <div id="headerdapage">
 </div>
 <body style="background: #333333">
-<div id="carregamento" class="text-center"><h1>Carregando...</h1></div>
+
+    <div id="carregamento" class="row h-100 align-items-center">
+        <div class="d-block w-25 mx-auto">
+            <h1>Carregando...</h1>
+            <i class="fa fa-cog fa-spin" style="font-size:200px;"></i>
+        </div>
+    </div>
 
 <div id="englobarTudo" class="esconder">
 
