--- a/masterpage.html
+++ b/masterpage.html
@@ -1,5 +1,6 @@
 <!--CSS-->
 <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="node_modules/animate.css/animate.css">
 <link rel="stylesheet" type="text/css" href="CSS/estilos.css">
 <!--Scripts-->
